--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">AnsweringMachine</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="push_start">Push Start!</string>
+    <string name="button_text_1">Start Listen</string>
+    <string name="button_text_2">Stop Listen</string>
+    
 </resources>
